--- a/구내식당_식수_인원_예측.ipynb
+++ b/구내식당_식수_인원_예측.ipynb
@@ -7,7 +7,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMyzHiTtdVpira8g5piSiWB",
+      "authorship_tag": "ABX9TyPIEgrsR7YbOSIuEJDGQgVt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,12 +175,12 @@
       "source": [
         "path = '/content/drive/MyDrive/DACON/Dacon_Industry_Meal/'\n",
         "train = pd.read_csv(path+'train.csv')\n",
-        "test = pd.read_csv(path+'train.csv')\n",
+        "test = pd.read_csv(path+'test.csv')\n",
         "\n",
-        "train.columns = ['일자', '요일', '정원','휴가자', '출장자', '시간외근무승인',\\\n",
+        "train.columns = ['일자', '요일', '정원','휴가자', '출장자', '야근자',\\\n",
         "                 '재택근무자', '조식', '중식', '석식', '중식계', '석식계']\n",
-        "test.columns = ['일자', '요일', '정원','휴가자', '출장자', '시간외근무승인',\\\n",
-        "                 '재택근무자', '조식', '중식', '석식', '중식계', '석식계']"
+        "test.columns = ['일자', '요일', '정원','휴가자', '출장자', '야근자',\\\n",
+        "                 '재택근무자', '조식', '중식', '석식']"
       ],
       "execution_count": null,
       "outputs": []
@@ -192,7 +192,7 @@
       },
       "source": [
         "train[['재택근무자', '중식계', '석식계']] = train[['재택근무자', '중식계', '석식계']].astype('int')\n",
-        "test[['재택근무자', '중식계', '석식계']] = test[['재택근무자', '중식계', '석식계']].astype('int')\n",
+        "test['재택근무자'] = test['재택근무자'].astype('int')\n",
         "\n",
         "train['일자'] = pd.to_datetime(train['일자'])\n",
         "test['일자'] = pd.to_datetime(test['일자'])"
@@ -232,7 +232,11 @@
         "<br>\n",
         "\n",
         "### 궁금증 1. 조식이 과연 의미가 있을까?\n",
-        "* 일단 없을거라 생각되지만 확인하기 어려움\n"
+        "* 일단 없을거라 생각되지만 확인하기 어려움\n",
+        "    * 조식 아침 8시 제공\n",
+        "    * 하루 본사 2명 숙직 18-익일09시\n",
+        "    * 점심 1140-1300, 저녁 1800-\n",
+        "        * 1140-1210 정도로 생각하라고 함\n"
       ]
     },
     {
@@ -304,7 +308,7 @@
         "alpha = 0.5\n",
         "plt.figure(figsize=(12, 8))\n",
         "\n",
-        "plt.bar(index, train.groupby(['요일'])['시간외근무승인'].sum(), label='야근', width=0.4)\n",
+        "plt.bar(index, train.groupby(['요일'])['야근자'].sum(), label='야근', width=0.4)\n",
         "plt.bar(index+bar_width, train.groupby(['요일'])['석식계'].sum(), label='석식', width=0.4)\n",
         "plt.xticks(index, label)\n",
         "plt.legend('best', labels=['야근', '석식'])\n",
@@ -502,9 +506,462 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hpQ2O1koPbsR"
+      },
+      "source": [
+        "### 공휴일\n",
+        "* 공휴일은 따로 기록되지 않고, 공휴일 전후로 휴가가 급격히 늘어남"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BPNCHzVpk7bM"
+      },
+      "source": [
+        "train[train['일자']=='2020-04-29']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wXFOoggrO-dd"
+      },
+      "source": [
+        "train[train['일자']=='2020-05-06']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UQVkGMQ7PFjT"
+      },
+      "source": [
+        "train[train['일자']=='2020-05-04']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g4QXJ_r_vfjj"
+      },
+      "source": [
+        "### 자연어처리"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nqegc2bmPsLU"
+      },
+      "source": [
+        "kkma = Kkma()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u3lxIqNvQThf"
+      },
+      "source": [
+        "# 명사들 추출\n",
+        "# train[['조식', '중식', '석식']] = train[['조식', '중식', '석식']].applymap(lambda x : kkma.nouns(x))\n",
+        "# test[['조식', '중식', '석식']] = test[['조식', '중식', '석식']].applymap(lambda x : kkma.nouns(x))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "566oLUg3QTkF"
+      },
+      "source": [
+        "# 단어 목록\n",
+        "# word_list_morning = train.iloc[:, 7].tolist()\n",
+        "word_list_lunch = train.iloc[:, 8].tolist()\n",
+        "word_list_dinner = train.iloc[:, 9].tolist()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3EtUsPO9QTmm"
+      },
+      "source": [
+        "# 중복 제거\n",
+        "# word_morning = [list(i) for i in set([tuple(j) for j in word_list_morning])]\n",
+        "word_lunch = [list(i) for i in set([tuple(j) for j in word_list_lunch])]\n",
+        "word_dinner = [list(i) for i in set([tuple(j) for j in word_list_dinner])]\n",
+        "\n",
+        "# food = word_morning + word_lunch + word_dinner\n",
+        "food = word_lunch+word_dinner"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7XQzFUBqqm74"
+      },
+      "source": [
+        "train['요일'] = train['일자'].dt.weekday\n",
+        "train['야근_가능'] = train['요일'].apply(lambda x : 1 if (x==2) or (x==4) else 0)\n",
+        "train['출근인원'] = train['정원']-(train['휴가자']+train['출장자']+train['재택근무자'])\n",
+        "train['휴가비율'] = train['휴가자']/train['정원']\n",
+        "train['출장비율'] = train['출장자']/train['정원']\n",
+        "train['야근비율'] = train['야근자']/train['출근인원']\n",
+        "train['재택비율'] = train['재택근무자']/train['정원']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BkQd9Gerqsmb"
+      },
+      "source": [
+        "test['요일'] = test['일자'].dt.weekday\n",
+        "test['야근_가능'] = test['요일'].apply(lambda x : 1 if (x==2) or (x==4) else 0)\n",
+        "test['출근인원'] = test['정원']-(test['휴가자']+test['출장자']+test['재택근무자'])\n",
+        "test['휴가비율'] = test['휴가자']/test['정원']\n",
+        "test['출장비율'] = test['출장자']/test['정원']\n",
+        "test['야근비율'] = test['야근자']/test['출근인원']\n",
+        "test['재택비율'] = test['재택근무자']/test['정원']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yajBqX3tqv14"
+      },
+      "source": [
+        "train_1 = train[['일자', '요일', '월', '년', '휴가비율', '출장비율', '중식계']]\n",
+        "train_2 = train[['일자', '요일', '월', '년', '야근_가능', '휴가비율', '출장비율', '야근비율', '석식계']]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CEMvV8sB0DPh"
+      },
+      "source": [
+        "def feature_pipeline(df) : \n",
+        "    df['요일'] = df['일자'].dt.weekday\n",
+        "    df['야근_가능'] = df['요일'].apply(lambda x : 1 if (x==2) or (x==4) else 0)\n",
+        "    df['출근인원'] = df['정원']-(df['휴가자']+df['출장자']+df['재택근무자'])\n",
+        "    df['휴가비율'] = df['휴가자']/df['정원']\n",
+        "    df['출장비율'] = df['출장자']/df['정원']\n",
+        "    df['야근비율'] = df['야근자']/df['출근인원']\n",
+        "    df['재택비율'] = df['재택근무자']/df['정원']\n",
+        "\n",
+        "    X_pivot_train = pd.pivot_table(data = df,\n",
+        "                values = ['정원', '휴가자', '출장자', '야근자', '재택근무자'],\n",
+        "                index = '요일',\n",
+        "                aggfunc = ['mean', 'min', 'max',\n",
+        "                            'std', 'var']\n",
+        "                )\n",
+        "    X_columns = [agg + '_' + '요일' + '_' + column for agg, column in X_pivot_train.columns]\n",
+        "    X_pivot_train.columns = X_columns\n",
+        "    df = pd.merge(df, X_pivot_train, on ='요일')\n",
+        "\n",
+        "    X_pivot_train = pd.pivot_table(data = df,\n",
+        "                values = ['정원', '휴가자', '출장자', '야근자', '재택근무자'],\n",
+        "                index = '월',\n",
+        "                aggfunc = ['mean', 'min', 'max',\n",
+        "                            'std', 'var']\n",
+        "                )\n",
+        "    X_columns = [agg + '_' + '월' + '_' + column for agg, column in X_pivot_train.columns]\n",
+        "    X_pivot_train.columns = X_columns\n",
+        "    df = pd.merge(df, X_pivot_train, on ='월')\n",
+        "\n",
+        "    return df"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qqsXP3Ui0Egh"
+      },
+      "source": [
+        "# train = feature_pipeline(train)\n",
+        "# test = feature_pipeline(test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8Rqv73R0XVAn"
+      },
+      "source": [
+        "train.corr()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNG5oMZV0EmQ"
+      },
+      "source": [
+        "# train.drop(['조식', '월일', '일', '년'], inplace=True, axis=1)\n",
+        "# test.drop(['조식', '일', '년'], inplace=True, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d8ZHwpUECwLJ"
+      },
+      "source": [
+        "# train_1 = train.drop(['석식계'], axis=1)\n",
+        "# train_2 = train.drop(['중식계'], axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cMG81-Zd0EpL"
+      },
+      "source": [
+        "reg = setup(data=train_1,\n",
+        "            target='중식계',\n",
+        "            numeric_imputation = 'mean',\n",
+        "            normalize = True,\n",
+        "            silent= True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p-TH5M-G0Es9"
+      },
+      "source": [
+        "compare_models()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9VwACtYG0FIi"
+      },
+      "source": [
+        "best_5 = compare_models(sort='MAE', n_select=5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LI6Gu_sIHccA"
+      },
+      "source": [
+        "blended = blend_models(estimator_list= best_5, fold=5, optimize='MAE')\n",
+        "pred_holdout = predict_model(blended)\n",
+        "final_model = finalize_model(blended)\n",
+        "pred1 = predict_model(final_model, test)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JQeY4iFLHm3g"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8IgMrp_JH13n"
+      },
+      "source": [
+        "sample_submission = pd.read_csv(path+'sample_submission.csv')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WbWj5LN-Hmyc"
+      },
+      "source": [
+        "submission = sample_submission.copy()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UNLa1rSiHmq_"
+      },
+      "source": [
+        "submission['중식계'] = pred1['Label']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KtJ9FqQeHmjL"
+      },
+      "source": [
+        "reg = setup(data=train_2,\n",
+        "            target='석식계',\n",
+        "            numeric_imputation = 'mean',\n",
+        "            normalize = True,\n",
+        "            silent= True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nnwX1aVR0FMg"
+      },
+      "source": [
+        "compare_models()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kJ8eorUIIF8R"
+      },
+      "source": [
+        "best_5 = compare_models(sort = 'MAE', n_select = 5)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Y1ifzzKbIF3d"
+      },
+      "source": [
+        "blended = blend_models(estimator_list = best_5, fold = 5, optimize = 'MAE')\n",
+        "pred_holdout = predict_model(blended)\n",
+        "final_model = finalize_model(blended)\n",
+        "pred2 = predict_model(final_model, test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "StAqyP5rIFzy"
+      },
+      "source": [
+        "submission['석식계'] = pred2['Label']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iDbZYkrdIFvi"
+      },
+      "source": [
+        "submission"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9y0iJ7GHIFie"
+      },
+      "source": [
+        "submission.to_csv('./20210605_01.csv', index=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7C5QP3NIFeL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0OUGyQ51IFZw"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6VBXkQNuxp6S"
+      },
+      "source": [
+        "# 나중에 한번 써보자\n",
+        "# train['일자'].dt.week"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nkfM4V8AQTv9"
       },
       "source": [
         ""
