코로나 검사자 항목 추가

--- a/구내식당_식수_인원_예측_Visualization.ipynb
+++ b/구내식당_식수_인원_예측_Visualization.ipynb
@@ -6,8 +6,17 @@
       "name": "구내식당_식수_인원_예측_Visualization.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO1CnVdk3bjhhO2yBc2KIhC",
+      "collapsed_sections": [
+        "Gd936e3mHw9B",
+        "lo_NhIz-H1rc",
+        "Z1IcSEvcH1zy",
+        "diT2xsI7H14k",
+        "xS6dSlrpH1-4",
+        "lqI2U-YAI3dI",
+        "7ajufp3TI5Em",
+        "cjzunatKI5I4"
+      ],
+      "authorship_tag": "ABX9TyPi9dG1IwExzKt6Iqgq/1+S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -108,6 +117,8 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import datetime as dt\n",
+        "import datetime\n",
+        "import itertools\n",
         "np.random.seed(0)\n",
         "\n",
         "from pycaret.regression import *\n",
@@ -234,7 +245,7 @@
       "source": [
         "### 가설 1. 재택근무는 코로나 때문에 생겼을 것이다.\n",
         "* 이후에, 코로나 확진자 수와 연동할 것이지만, 현재로써도 가설이 맞음을 확인할 수 있다.\n",
-        "![image](https://user-images.githubusercontent.com/54921730/120911062-14813f80-c6bf-11eb-85e6-41bd263e1eb2.png)\n",
+        "![image](https://user-images.githubusercontent.com/54921730/120912709-9330a980-c6cc-11eb-97e5-52ae39115551.png)\n",
         "* 이제 여러가지 의문점이 추가로 등장\n",
         "    * 재택 근무자 수가 증가함에 따라 식수 인원도 증가하는가?\n",
         "        * 의외의 결과 발생 -> 코로나 환자 증가로 인해, 외식이 어려워지면서 식수 인원이 증가한 것으로 추측\n",
@@ -249,9 +260,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qBGhClBbVvkb"
+      },
+      "source": [
+        "## 국내 일일 코로나 확진자 추이"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "A_u9yl5DKzQ2"
+        "id": "xGNxMqXED8jh"
+      },
+      "source": [
+        "parse"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ewqiHNlKV0ZK"
       },
       "source": [
         "# 코로나 발생현황 데이터 불러와서 비교할 예정\n",
@@ -262,19 +293,234 @@
         "# 1. URL 파라미터 분리하기.\n",
         "# Service URL\n",
         "url = 'http://openapi.data.go.kr/openapi/service/rest/Covid19/getCovid19InfStateJson'\n",
-        "servicekey = '{9qhUwKCc9ASN8d7C8HnGWLyQOr1P4rkXKxsYwShxM6PLhVSnNwqlkZQsY%2Fk%2Bx4Rixmyznbm65TySlJtMbVi3KA%3D%3D}'\n",
+        "servicekey = '9qhUwKCc9ASN8d7C8HnGWLyQOr1P4rkXKxsYwShxM6PLhVSnNwqlkZQsY%2Fk%2Bx4Rixmyznbm65TySlJtMbVi3KA%3D%3D'\n",
         "decodekey = unquote(servicekey)\n",
         "\n",
-        "queryParams = '?' + urlencode(    # get 방식으로 쿼리를 분리하기 위해 '?'를 넣은 것이다. 메타코드 아님.\n",
-        "    {\n",
-        "        quote_plus('ServiceKey') : servicekey,    # 필수 항목 1 : 서비스키 (본인의 서비스키)\n",
-        "    }\n",
-        ")\n",
         "\n",
-        "URL = url + queryParams\n",
+        "startCreateDt = 20190101\n",
+        "endCreateDt = 20220101\n",
+        "\n",
+        "query_params = '?' + urlencode({\n",
+        "    quote_plus('serviceKey'): decodekey,\n",
+        "    quote_plus('startCreateDt'): startCreateDt,\n",
+        "    quote_plus('endCreateDt'): endCreateDt\n",
+        "})\n",
+        "\n",
+        "URL = url + query_params\n",
+        "\n",
         "request = Request(URL)\n",
         "page = urlopen(request).read()\n",
-        "soup = BeautifulSoup(page, 'html.parser')"
+        "soup = BeautifulSoup(page, 'html.parser')\n",
+        "parse = soup.find_all(['decidecnt', 'statedt', 'examcnt'])\n",
+        "\n",
+        "co_df = []\n",
+        "for dt, cnt, care in zip(parse[2::3], parse[0::3], parse[1::3]):\n",
+        "    co_df.append([dt.text, int(cnt.text), int(care.text)])\n",
+        "\n",
+        "co_df = pd.DataFrame(co_df, columns=['일자', '누적확진자', '일일검사자'])\n",
+        "co_df = co_df.sort_values(by='일자').reset_index(drop=True)\n",
+        "co_df['누적확진자'][4] = 15\n",
+        "co_df['일일확진자'] = co_df['누적확진자'].diff()\n",
+        "co_df = co_df.loc[1:].reset_index(drop=True)  # 맨 앞의 데이터는 지우기 (일별 확진자가 계산되지 않았기 때문에)\n",
+        "co_df['일자'] = pd.to_datetime(co_df['일자'])\n",
+        "co_df['누적검사자'] = list(itertools.accumulate(co_df['일일검사자']))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0pjItGzckUGV"
+      },
+      "source": [
+        "### 진주시 일일 코로나 확진자 데이터 크롤링"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OpXbznmQ34Mx"
+      },
+      "source": [
+        "import ssl\n",
+        "context = ssl._create_unverified_context()\n",
+        "weekday_list = ['(월)', '(화)', '(수)', '(목)', '(금)', '(토)', '(일)']\n",
+        "jinju_co = [[], []]\n",
+        "\n",
+        "for i in tqdm(range(2, 6)):\n",
+        "    request= Request('https://www.jinju.go.kr/05190/05641.web?&cpage='+str(i))\n",
+        "    page = urlopen(request, context=context).read()\n",
+        "    soup = BeautifulSoup(page, 'html.parser')\n",
+        "    for i in soup.select('span.t1') : \n",
+        "        if ('진주' in i.text) and ('경남' in i.text) :\n",
+        "            jinju_co[0].append(i.text)\n",
+        "        if  i.text[-3:] in weekday_list : \n",
+        "            jinju_co[1].append(i.text)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pX6O3NY6Xwbe"
+      },
+      "source": [
+        "jinju_df = pd.DataFrame([jinju_co[0], jinju_co[1][1:]]).T\n",
+        "jinju_df.columns = ['번호', '일자']\n",
+        "jinju_df['요일'] = jinju_df['일자'].apply(lambda x : x[-3:].replace('(','').replace(')',''))\n",
+        "jinju_df['일자'] = jinju_df['일자'].apply(lambda x: x[:-4].replace(' ','').replace('.', '-'))\n",
+        "jinju_df['일자'] = jinju_df.apply(lambda x : '2020-'+x['일자'] if x.name > 759\\\n",
+        "                                else '2021-'+x['일자'], axis=1)\n",
+        "jinju_df['일자'] = pd.to_datetime(jinju_df['일자'])\n",
+        "# 토요일에 확진자가 발생했을 경우 금요일로, 일요일에 확진자가 발생했을 경우 월요일로 변경\n",
+        "jinju_df['일자'] = jinju_df.apply(lambda x : x['일자'] - datetime.timedelta(1) if x['요일']=='토'\n",
+        "                            else (x['일자'] + datetime.timedelta(1) if x['요일']=='일'\n",
+        "                            else x['일자']), axis=1)\n",
+        "jinju_df = jinju_df[jinju_df['번호']!='진주기타1(경남기타1)']\n",
+        "jinju_df['번호'] = jinju_df['번호'].apply(lambda x : x.split('(')[0].replace('진주', '')).astype('int')\n",
+        "jinju_df = jinju_df.groupby(['일자'])['번호'].max().reset_index()\n",
+        "jinju_df.columns = ['일자', '진주_누적확진자']\n",
+        "jinju_df.sort_values('일자', inplace=True)\n",
+        "jinju_df['진주_일일확진자'] = jinju_df['진주_누적확진자'].diff()\n",
+        "jinju_df['진주_일일확진자'][0] = 2\n",
+        "kojin_df = pd.merge(co_df, jinju_df, on='일자', how='left').iloc[:434]\n",
+        "kojin_df['진주_일일확진자'] = kojin_df['진주_일일확진자'].fillna(0)\n",
+        "kojin_df['진주_누적확진자'] = list(itertools.accumulate(kojin_df['진주_일일확진자']))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "A3T-9lTNq_Yd"
+      },
+      "source": [
+        "### 경남 코로나 일일 확진자"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x0RiMpQ_jSdP"
+      },
+      "source": [
+        "url = 'http://openapi.data.go.kr/openapi/service/rest/Covid19/getCovid19SidoInfStateJson'\n",
+        "servicekey = '9qhUwKCc9ASN8d7C8HnGWLyQOr1P4rkXKxsYwShxM6PLhVSnNwqlkZQsY%2Fk%2Bx4Rixmyznbm65TySlJtMbVi3KA%3D%3D'\n",
+        "decodekey = unquote(servicekey)\n",
+        "\n",
+        "\n",
+        "startCreateDt = 20200201\n",
+        "endCreateDt = 20210409\n",
+        "\n",
+        "query_params = '?' + urlencode({\n",
+        "    quote_plus('serviceKey'): decodekey,\n",
+        "    quote_plus('startCreateDt'): startCreateDt,\n",
+        "    quote_plus('endCreateDt'): endCreateDt\n",
+        "})\n",
+        "\n",
+        "URL = url + query_params\n",
+        "\n",
+        "request = Request(URL)\n",
+        "page = urlopen(request).read()\n",
+        "soup = BeautifulSoup(page, 'html.parser')\n",
+        "import time\n",
+        "st_time = time.time()\n",
+        "sido_df = []\n",
+        "check_point = 0\n",
+        "sido_corona = soup.find_all(['gubun','stdday', 'defcnt','localocccnt'])\n",
+        "for i in range(len(sido_corona)) : \n",
+        "    if '경남' in sido_corona[i].text : \n",
+        "        sido_df.append([sido_corona[i-2].text, sido_corona[i-1].text])\n",
+        "    \n",
+        "    if i%1000 == 0 : \n",
+        "        ed_time = time.time() - st_time\n",
+        "        print(f'\\r남은 데이터 : {i}/{len(sido_corona)}    남은 시간 : {ed_time*(len(sido_corona)-i)}', end='')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kIPx4DnNnLxa"
+      },
+      "source": [
+        "kn_df = pd.DataFrame(sido_df, columns=['일자', '경남_누적확진자'])\n",
+        "kn_df['일자'] = kn_df['일자'].apply(lambda x: x[:-4].replace(' ','').replace('년', '-').replace('월', '-').replace('일', ''))\n",
+        "kn_df = kn_df.iloc[:-1]\n",
+        "kn_df['일자'] = pd.to_datetime(kn_df['일자'])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FSG94pI0deOz"
+      },
+      "source": [
+        "## 총 데이터 결합"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-2wVGiULfKn4"
+      },
+      "source": [
+        "corona_df = pd.merge(kojin_df, kn_df, on='일자', how='left')\n",
+        "corona_df = corona_df.fillna(0)\n",
+        "corona_df['경남_누적확진자'][20:32] = [2, 4, 7, 17, 23, 28, 43, 48, 58, 59, 61, 62]\n",
+        "corona_df['경남_누적확진자'] = corona_df['경남_누적확진자'].astype('int')\n",
+        "corona_df['경남_일일확진자'] = corona_df['경남_누적확진자'].diff()\n",
+        "corona_df.dropna(inplace=True)\n",
+        "corona_df.iloc[:, 1:] = corona_df.iloc[:, 1:].astype(int)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hp3m39cui7NH"
+      },
+      "source": [
+        "corona_df.to_csv('./국내_진주_경남-누적_일일확진자.csv', index=False)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "e4FtBpiYsVFD"
+      },
+      "source": [
+        "## 원본데이터+코로나 데이터"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hf1B_b2wpyp9"
+      },
+      "source": [
+        "co_train = pd.merge(train, corona_df, on='일자', how='left')\n",
+        "co_train = co_train.fillna(0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QERTbrBIvm1I"
+      },
+      "source": [
+        "co_graph = co_train.iloc[900:]"
       ],
       "execution_count": null,
       "outputs": []
@@ -285,10 +531,47 @@
         "id": "M_XUiNywI5LF"
       },
       "source": [
-        "plt.plot(train['일자'], train['재택근무자'])\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "plt.plot(co_graph['일자'], co_graph['재택근무자'], label='재택근무자')\n",
+        "plt.plot(co_graph['일자'], co_graph['일일확진자'], label='일일확진자')\n",
+        "plt.plot(co_graph['일자'], co_graph['진주_일일확진자'], label='진주_일일확진자')\n",
+        "plt.plot(co_graph['일자'], np.log2(co_graph['누적확진자']), label='누적확진자')\n",
+        "plt.plot(co_graph['일자'], co_graph['진주_누적확진자'], label='진주_누적확진자')\n",
+        "plt.plot(co_graph['일자'], co_graph['경남_일일확진자'], label='경남_일일확진자')\n",
+        "plt.plot(co_graph['일자'], co_graph['경남_누적확진자'], label='경남_누적확진자')\n",
+        "plt.plot(co_graph['일자'], co_graph['일일검사자']/100, label='일일검사자')\n",
+        "plt.plot(co_graph['일자'], np.log2(co_graph['누적검사자']), label='누적검사자')\n",
         "plt.xlabel('일자')\n",
-        "plt.ylabel('재택 근무자 수')\n",
-        "plt.title('재택 근무자 수 추이')\n",
+        "plt.ylabel('인원 수')\n",
+        "plt.legend('best', labels=['재택근무자', '일별확진자', '진주_일일확진자',\\\n",
+        "                           '누적확진자', '진주_누적확진자', '경남_일일확진자',\\\n",
+        "                           '경남_누적확진자', '일일검사자', '누적검사자'])\n",
+        "plt.title('재택근무/일별확진자 수 추이')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KkThqRAfGOxz"
+      },
+      "source": [
+        "co_train.corr()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fIvH7RqTq5ZA"
+      },
+      "source": [
+        "import seaborn as sns\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.heatmap(co_train.corr())\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -313,7 +596,8 @@
         "id": "aNK_xJ2ASGsq"
       },
       "source": [
-        "\n",
+        "plt.plot(train.groupby(['년'])['정원'].mean())\n",
+        "plt.title('년도 별 정원', fontsize=12)\n",
         "\n",
         "plt.show()"
       ],
