파라미터 조정

--- a/LH_Dinner.ipynb
+++ b/LH_Dinner.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1WJxt7Gh85Dztj0CiP8-zneepeNP_dL5o",
-      "authorship_tag": "ABX9TyMKZ7D4Wt0pWH+pJ9wjEQ1E",
+      "authorship_tag": "ABX9TyPJhQz4DlmYLUFH5ae3Tafn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -540,6 +540,30 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "nbcfgNT5jUNH"
+      },
+      "source": [
+        "df.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nqUewNEsjT1T"
+      },
+      "source": [
+        "dc = df.copy()\n",
+        "# dc.columns\n",
+        "dc = dc[['일자', '요일', '월', '년', '야근_가능', '휴가비율', '출장비율', '야근비율', '석식계']]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "PM-QyA2kdycg"
       },
       "source": [
@@ -649,7 +673,7 @@
         "id": "mD9DMGkweJbU"
       },
       "source": [
-        "submission = pd.read_csv(sub_path+'/20210614_01.csv')"
+        "submission = pd.read_csv(sub_path+'/20210614_02.csv')"
       ],
       "execution_count": null,
       "outputs": []
@@ -682,7 +706,7 @@
         "id": "NdMKjVJReeyG"
       },
       "source": [
-        "submission.to_csv(sub_path+'/20210614_01.csv', index=False)"
+        "submission.to_csv(sub_path+'/20210614_02.csv', index=False)"
       ],
       "execution_count": null,
       "outputs": []
