날씨, 미세먼지 데이터 명목화 진행

--- a/LH_Lunch.ipynb
+++ b/LH_Lunch.ipynb
@@ -8,7 +8,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1l2NH5yafpIojJ-f0dM0WEDv-rwEiHKNw",
-      "authorship_tag": "ABX9TyMLv5YsfLzVuVZLFAgvXdll",
+      "authorship_tag": "ABX9TyPNX8rbQ05uZxMPRHlRQcSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -126,10 +126,19 @@
         "id": "3iU8W43cfwr8"
       },
       "source": [
-        "df = df.drop(columns=['야근자', '조식', '석식', '석식계'])"
+        "df = df.drop(columns=['야근자', '조식', '중식','석식', '석식계'])"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pAaGu6sRVOR1"
+      },
+      "source": [
+        "### 외부 데이터 추가"
+      ]
     },
     {
       "cell_type": "code",
@@ -347,19 +356,25 @@
       },
       "source": [
         "df = pd.merge(df, dust_df, on='일자')\n",
-        "df = pd.merge(df, w_df, on='일자')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "jreekKsaBRxG"
-      },
-      "source": [
+        "df = pd.merge(df, w_df, on='일자')\n",
+        "\n",
+        "# 결측치 근처 관측치로 대체\n",
         "df['fine_dust'][564, 1129] = [36, 23]\n",
-        "df['ultra_fine_dust'][234, 235, 564, 654, 1129] = [11, 31, 26, 5, 9]"
+        "df['ultra_fine_dust'][234, 235, 564, 654, 1129] = [11, 31, 26, 5, 9]\n",
+        "\n",
+        "# 저녁 컬럼 삭제\n",
+        "df = df.drop(columns=['rain_dinner', 'temp_dinner', 'hum_dinner', 'rain_type_dinner', 'discomfort_index_dinner'])\n",
+        "\n",
+        "# 미세먼지 명목변수화\n",
+        "df['fine_degree'] = df['fine_dust'].apply(lambda x : 0 if 0<=x<=30 else (1 if 31<=x<=80 else (2 if 81<=x<=150 else 3)))\n",
+        "df['ultra_fine_degree'] = df['ultra_fine_dust'].apply(lambda x : 0 if 0<=x<=15 else (1 if 16<=x<=35 else (2 if 36<=x<=75 else 3)))\n",
+        "df['fine_degree'] = df.apply(lambda x : max(x['fine_degree'], x['ultra_fine_degree']), axis=1)\n",
+        "\n",
+        "# 강수량 명목변수화\n",
+        "df['rain_degree'] = df['rain_lunch'].apply(lambda x : 0 if x < 2 else 1)\n",
+        "\n",
+        "# 불쾌지수 명목변수화 \n",
+        "df['discomfort_degree'] = df['discomfort_index_lunch'].apply(lambda x : 0 if x<68 else (1 if 68<=x<75 else (2 if 75<=x<80 else 3)))"
       ],
       "execution_count": null,
       "outputs": []
@@ -367,27 +382,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kRAIoNu1k-E6"
+        "id": "2sbY-BF5UkhR"
       },
       "source": [
-        "df = df.drop(columns=['rain_dinner', 'temp_dinner', 'hum_dinner', 'rain_type_dinner', 'discomfort_index_dinner'])"
+        "# 코로나 데이터 추가\n",
+        "corona = corona.drop_duplicates(['일자'])\n",
+        "check_corona = corona[['일자', '누적검사자']]\n",
+        "\n",
+        "df = pd.merge(df,corona[['일자', '일일검사자']], on='일자', how='left')\n",
+        "df = df.fillna(0)"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
+      "metadata": {
+        "id": "A0PpA641VFuy"
+      },
+      "source": [
+        "# 공휴일 데이터 추가\n",
+        "holiday['date'] = pd.to_datetime(holiday['date'])\n",
+        "df['일자'] = pd.to_datetime(df['일자'])\n",
+        "df['before_holiday'] = df['일자'].apply(lambda x : 1 if (x+dt.timedelta(1) in holiday['date'].tolist()) else 0)\n",
+        "df['after_holiday'] = df['일자'].apply(lambda x : 1 if (x-dt.timedelta(1) in holiday['date'].tolist()) else 0)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n67gXH9HUkz1"
+      },
+      "source": [
+        "# # 이벤트 데이터 고민 - 복날 / 연말\n",
+        "# event = pd.to_datetime(['2017-07-12', '2018-07-17', '2019-07-12', '2020-07-16'])\n",
+        "# df['이벤트'] = df['일자'].apply(lambda x : 1 if x in event else 0)\n",
+        "\n",
+        "# end_year = df[(df['월']==12)&(df['일']>=21)].index\n",
+        "# df['연말'] = df.apply(lambda x : 1 if  x.name in end_year else 0, axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y3yZ6AQZV1sF"
+      },
+      "source": [
+        "## 중간 변수 색출"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0speUjrQVxne"
+      },
+      "source": [
+        "df = df[['일자', '요일', '정원', '휴가자', '출장자', '재택근무자', '중식계', 'fine_degree', 'rain_degree', 'discomfort_degree', '일일검사자', 'before_holiday', 'after_holiday']]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "pI10OVxAg7Zs"
       },
       "source": [
-        "df['일자'] = pd.to_datetime(df['일자'])\n",
-        "df['년'] = df['일자'].dt.year\n",
-        "df['월'] = df['일자'].dt.month\n",
-        "df['일'] = df['일자'].dt.day"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### 파생변수"
+      ]
     },
     {
       "cell_type": "code",
@@ -395,9 +461,9 @@
         "id": "ZQvhkMMag8LB"
       },
       "source": [
-        "holiday['date'] = pd.to_datetime(holiday['date'])\n",
-        "df['before_holiday'] = df['일자'].apply(lambda x : 1 if (x+dt.timedelta(1) in holiday['date'].tolist()) else 0)\n",
-        "df['after_holiday'] = df['일자'].apply(lambda x : 1 if (x-dt.timedelta(1) in holiday['date'].tolist()) else 0)"
+        "df['년'] = df['일자'].dt.year\n",
+        "df['월'] = df['일자'].dt.month\n",
+        "df['일'] = df['일자'].dt.day"
       ],
       "execution_count": null,
       "outputs": []
@@ -444,82 +510,30 @@
         "train['주차'][list(train[train['주차']==-46].index)] = np.array([6, 6, 6])\n",
         "\n",
         "df = pd.concat([train, test])\n",
-        "df['출장자제외'] = df['정원'] - df['출장자']\n",
-        "df['재택근무제외'] = df['정원'] - df['재택근무자']\n",
-        "df['연기준몇일째']= df['일자'].dt.dayofyear\n",
-        "df['연기준몇주째']= df['일자'].dt.weekofyear\n",
-        "df['월일수']= df['일자'].dt.days_in_month\n",
-        "df['윤년여부'] = df['일자'].dt.is_leap_year\n",
-        "df['월시작일여부'] = df['일자'].dt.is_month_start\n",
-        "df['월마지막일여부'] =df['일자'].dt.is_month_end\n",
-        "df['분기시작일여부'] =df['일자'].dt.is_quarter_start\n",
-        "df['분기마지막일여부'] =df['일자'].dt.is_quarter_end\n",
-        "df['연시작일여부'] =df['일자'].dt.is_year_start\n",
-        "df['연마지막일여부'] =df['일자'].dt.is_year_end"
+        "# df['출장자제외'] = df['정원'] - df['출장자']\n",
+        "# df['재택근무제외'] = df['정원'] - df['재택근무자']\n",
+        "# df['연기준몇일째']= df['일자'].dt.dayofyear\n",
+        "# df['연기준몇주째']= df['일자'].dt.weekofyear\n",
+        "# df['월일수']= df['일자'].dt.days_in_month\n",
+        "# df['윤년여부'] = df['일자'].dt.is_leap_year\n",
+        "# df['월시작일여부'] = df['일자'].dt.is_month_start\n",
+        "# df['월마지막일여부'] =df['일자'].dt.is_month_end\n",
+        "# df['분기시작일여부'] =df['일자'].dt.is_quarter_start\n",
+        "# df['분기마지막일여부'] =df['일자'].dt.is_quarter_end\n",
+        "# df['연시작일여부'] =df['일자'].dt.is_year_start\n",
+        "# df['연마지막일여부'] =df['일자'].dt.is_year_end"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xvLNTcYKamaM"
-      },
-      "source": [
-        "end_year = df[(df['월']==12)&(df['일']>=21)].index\n",
-        "df['연말'] = df.apply(lambda x : 1 if  x.name in end_year else 0, axis=1)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "y6cOIndP_4qV"
-      },
-      "source": [
-        "corona['일자'] = pd.to_datetime(corona['일자'])\n",
-        "corona = corona.drop_duplicates(['일자'])\n",
-        "check_corona = corona[['일자', '누적검사자']]"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2wnK71KfhX2i"
-      },
-      "source": [
-        "df = pd.merge(df,corona[['일자', '일일검사자']], on='일자', how='left')\n",
-        "df = df.fillna(0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "B7whoF48rOKX"
       },
       "source": [
-        "# 이벤트\n",
-        "event = pd.to_datetime(['2017-07-12', '2018-07-17', '2019-07-12', '2020-07-16'])\n",
-        "df['이벤트'] = df['일자'].apply(lambda x : 1 if x in event else 0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XPm55_c6UCUN"
-      },
-      "source": [
-        "df = df.drop(columns=['중식'])"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### 데이터 정규화"
+      ]
     },
     {
       "cell_type": "code",
@@ -540,12 +554,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "qAga16wgie2u"
+      },
+      "source": [
+        "df.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "XoMfoTdEXPl8"
       },
       "source": [
         "dc = df.copy()\n",
         "# dc.columns\n",
-        "# dc = dc[['일자', '요일', '월', '년', '일', '휴가비율', '출장비율', '중식계', '계절']]"
+        "dc = dc[['일자', '요일', '월', '년', '휴가비율', '출장비율', '중식계', 'after_holiday', \n",
+        "         'before_holiday', 'rain_degree' ,'discomfort_degree', 'fine_degree', '주차', '계절', '출근인원']]"
       ],
       "execution_count": null,
       "outputs": []
@@ -651,7 +677,7 @@
         "id": "n-RXYMOBZA3O"
       },
       "source": [
-        "submission.to_csv(sub_path+'/20210614_01.csv', index=False)"
+        "submission.to_csv(sub_path+'/20210615_01.csv', index=False)"
       ],
       "execution_count": null,
       "outputs": []
